Optimised Registration -Transferred all logic from the RegisterFragment to the AccountManagement class -Implemented User into AccountManagementViewModel

--- a/app/src/main/res/menu/menu_startup.xml
+++ b/app/src/main/res/menu/menu_startup.xml
@@ -8,4 +8,8 @@
         android:id="@+id/navigation_register"
         android:icon="@drawable/ic_favorite_icon"
         android:title="@string/title_acc_create"/>
+    <item
+        android:id="@+id/navigation_register_new"
+        android:icon="@drawable/ic_favorite_icon"
+        android:title="NRegister"/>
 </menu>
