--- a/app/src/main/res/navigation/nav_startup.xml
+++ b/app/src/main/res/navigation/nav_startup.xml
@@ -18,8 +18,8 @@
         tools:layout="@layout/fragment_register" />
 
     <fragment
-        android:id="@+id/navigation_register_temp"
+        android:id="@+id/navigation_register_new"
         android:name="com.example.aida.views.AccountManagement"
-        android:label="Temp Reg"
+        android:label="New Registration Form"
         tools:layout="@layout/fragment_account_management" />
 </navigation>
