--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -60,8 +60,8 @@
         tools:layout="@layout/fragment_meal_calculator"/>
 
     <fragment
-        android:id="@+id/navigation_edit_temp"
+        android:id="@+id/navigation_edit_new"
         android:name="com.example.aida.views.AccountManagement"
-        android:label="Temp Edit"
+        android:label="Edit Account New"
         tools:layout="@layout/fragment_account_management" />
 </navigation>
