Optimised Navigational Menus -Rewired Register button on the StartActivity to take the user to the new registration form -Rewired the EditAccount button on the MainActivity  to take the user to the new account editing form -Removed unneeded elements from the navigational menus -Removed unneeded methods from the MainActivity class -Added a 5th button to the MainActivity bottom bar called 'More' which is at the moment not connected with anything

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,4 +16,7 @@
         android:id="@+id/navigation_account_view"
         android:icon="@drawable/ic_favorite_icon"
         android:title="@string/title_user_profile"/>
+    <item
+        android:icon="@drawable/ic_favorite_icon"
+        android:title="More"/>
 </menu>
